--- a/scripts/config.yaml
+++ b/scripts/config.yaml
@@ -1,7 +1,8 @@
+TRANSCRIPTOME: 
 SALMON_INDEX: 
-PARENT_DIR:
-SYMLINKED_DIR:
+PARENT_DIR: 
+SYMLINKED_DIR: 
 ADAPTOR_SEQUENCE:
-URQT_PATH:
-TASK_CPUS:
-MULTIQC_REPORT_PATH:
+URQT_PATH: 
+TASK_CPUS: 
+MULTIQC_REPORT_PATH: 
