--- a/scripts/config.yaml
+++ b/scripts/config.yaml
@@ -6,3 +6,12 @@ ADAPTOR_SEQUENCE:
 URQT_PATH: 
 TASK_CPUS: 
 MULTIQC_REPORT_PATH: 
+
+# Number of files includes an option between one and two files.
+# This will have considerable effect on how snakemake will function. 
+
+# Threads; below specifices the wildflags for 
+# threading
+FASTQ_THREADS: "--threads 12"
+URQT_THREADS: "12"
+
